# django_mini

./: .coverage  .gitignore  .python-version  README.md  check.yml  pyproject.toml  requirements.txt
.github/: checks.yml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py
accounts/tests/: test_account.py
config/: settings.py  urls.py
transactions/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_alter_account_account_number_alter_account_balance_and_more.py
transactions/tests/: test_transaction_model.py  test_transaction_view.py
users/: admin.py  forms.py  models.py  oauth_urls.py  oauth_views.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_is_active_users_is_staff_and_more.py  0003_rename_is_admin_users_is_admin.py
users/templates/: register.html
users/tests/: test_user.py
